# API-Python

./: README.md  pyproject.toml
app/: aplicacao.py  main.py
app/sendgrid_teste/: email_sendgrid.py
